[tool.poetry]
name = "pypackwiz"
version = "0.0.0"
description = "Ease modpack development with the power of Python and packwiz."
authors = ["glomdom"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE"
]

[tool.poetry.scripts]
pypackwiz = "pypackwiz.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
